Add support for collections
